syntax = "proto3";

package webitel.chat.service.telegrambot;

import "entity.proto";

service TelegramBotService {
  rpc MessageFromFlow(MessageFromFlowRequest) returns (MessageFromFlowResponse) {}
  rpc AddProfile(AddProfileRequest) returns (AddProfileResponse) {}
  rpc DeleteProfile(DeleteProfileRequest) returns (DeleteProfileResponse) {}
}

message MessageFromFlowRequest {
  string session_id = 1;
  int64 profile_id = 2;
  int64 conversation_id = 3;
  entity.Message message = 4;
}

message MessageFromFlowResponse {
  entity.Error error = 1;
}

message AddProfileRequest {
  entity.Profile profile = 1;
}

message AddProfileResponse {
  entity.Error error = 1;
}

message DeleteProfileRequest {
  int64 profile_id = 1;
}

message DeleteProfileResponse {
  entity.Error error = 1;
}